sdk/core/include/cimsue/cimsue_c.h


typedef enum { CIMSUE_TRANSPORT_UDP = 0, CIMSUE_TRANSPORT_TCP = 1, CIMSUE_TRANSPORT_TLS = 2 } cimsue_transport_t;
typedef enum { CIMSUE_AUTH_DIGEST = 0, CIMSUE_AUTH_AKA = 1 } cimsue_auth_scheme_t;
typedef enum { CIMSUE_SRTP_OFF = 0, CIMSUE_SRTP_OPTIONAL = 1, CIMSUE_SRTP_REQUIRED = 2 } cimsue_media_security_t;
typedef enum {
    CIMSUE_REG_UNREGISTERED = 0, CIMSUE_REG_REGISTERING = 1, CIMSUE_REG_REGISTERED = 2, CIMSUE_REG_FAILED = 3
} cimsue_reg_state_t;
typedef enum {
    CIMSUE_CALL_NULL = 0, CIMSUE_CALL_OUTGOING = 1, CIMSUE_CALL_INCOMING = 2,
    CIMSUE_CALL_ACTIVE = 3, CIMSUE_CALL_HELD = 4, CIMSUE_CALL_DISCONNECTED = 5
} cimsue_call_state_t;
typedef enum { CIMSUE_DIR_OUTGOING = 0, CIMSUE_DIR_INCOMING = 1 } cimsue_call_dir_t;
typedef enum {
    CIMSUE_FLOOR_IDLE = 0, CIMSUE_FLOOR_REQUESTING = 1, CIMSUE_FLOOR_SPEAKING = 2,
    CIMSUE_FLOOR_LISTENING = 3, CIMSUE_FLOOR_QUEUED = 4
} cimsue_floor_state_t;
typedef enum {
    CIMSUE_FLOOR_EV_GRANTED = 0, CIMSUE_FLOOR_EV_DENIED = 1, CIMSUE_FLOOR_EV_IDLE = 2,
    CIMSUE_FLOOR_EV_TAKEN = 3, CIMSUE_FLOOR_EV_TALKER_LEFT = 4, CIMSUE_FLOOR_EV_REVOKED = 5,
    CIMSUE_FLOOR_EV_QUEUE_POSITION = 6, CIMSUE_FLOOR_EV_QUEUE_CANCELLED = 7,
    CIMSUE_FLOOR_EV_REQUEST_TIMEOUT = 8, CIMSUE_FLOOR_EV_TALK_LIMIT = 9, CIMSUE_FLOOR_EV_OTHER = 10
} cimsue_floor_kind_t;
typedef struct {
    const char* user_agent;
    int32_t     log_level;              
    const char* tls_ca_pem;             
    int32_t     tls_verify_server;
    int32_t     null_audio_device;      
    int32_t     no_vad;
    int32_t     udp_port, tcp_port, tls_port;   
    uint32_t    clock_rate;
} cimsue_engine_config_t;
typedef struct {
    const char*             server_host;
    int32_t                 server_port;
    cimsue_transport_t      transport;
    const char*             domain;
    const char*             msisdn;
    const char*             imsi;
    const char*             auth_id;        
    const char*             display_name;
    const char*             ha1;            
    const char*             password;
    cimsue_auth_scheme_t    auth_scheme;
    const char*             aka_k;
    const char*             aka_opc;
    const char*             aka_amf;
    const char* const*      sec_mechanisms; 
    int32_t                 sec_mechanism_count;
    cimsue_media_security_t media_security;
    int32_t                 expires_sec;
    const char*             contact_params;
    int32_t                 video_auto_transmit;
    const char*             mcptt_id;       
    int32_t                 auto_answer_mcptt;
} cimsue_account_config_t;
typedef struct {
    int32_t video;
    int32_t emergency;
} cimsue_call_options_t;
typedef struct {
    int32_t            emergency;
    int32_t            imminent_peril;
    int32_t            listen_only;     
    int32_t            full_duplex;     
    const char* const* members;         
    int32_t            member_count;
} cimsue_group_call_options_t;
typedef struct {
    const char* name;
    const char* value;
} cimsue_header_t;
typedef struct {
    int32_t            account_id;
    cimsue_reg_state_t state;
    int32_t            code;
    const char*        reason;
    int32_t            expires_sec;
} cimsue_reg_info_t;
typedef struct {
    int32_t     present;
    const char* session_type;           
    const char* request_uri;
    const char* calling_user_id;
    const char* calling_group_id;
    int32_t     emergency;
    int32_t     imminent_peril;
    int32_t     private_call;
    int32_t     no_floor_ctrl;
} cimsue_mcptt_info_t;
typedef struct {
    uint32_t    ssrc;
    const char* label;
    int32_t     active;
    float       level;
} cimsue_media_source_t;
typedef struct {
    int32_t                      call_id;
    int32_t                      account_id;
    cimsue_call_dir_t            dir;
    cimsue_call_state_t          state;
    const char*                  remote_uri;
    const char*                  called_party;      
    int32_t                      video;
    int32_t                      media_active;
    int32_t                      muted;
    int32_t                      listen;
    int32_t                      playback_route;
    int32_t                      last_code;
    const char*                  last_reason;
    const cimsue_media_source_t* sources;
    int32_t                      source_count;
    int32_t                      is_mcptt;
    const char*                  group_id;
    cimsue_mcptt_info_t          mcptt;
    int32_t                      half_duplex;
    int32_t                      listen_only;
    const char*                  joined_dialog;     
} cimsue_call_info_t;
typedef struct {
    const char* id;                     
    uint32_t    ssrc;                   
    int32_t     self;
} cimsue_talker_t;
typedef struct {
    cimsue_floor_kind_t    kind;
    int32_t                call_id;
    cimsue_floor_state_t   state;
    int32_t                duration_sec;
    int32_t                cause;
    const char*            cause_text;
    int32_t                indicator;
    int32_t                permission;
    int32_t                queue_position;
    int32_t                me_speaking;
    const cimsue_talker_t* talkers;
    int32_t                talker_count;
    int32_t                raw_type;
} cimsue_floor_event_t;
typedef struct {
    cimsue_floor_state_t   state;
    const cimsue_talker_t* talkers;
    int32_t                talker_count;
    int32_t                can_request;
    int32_t                indicator;
    int32_t                queue_position;
    int32_t                local_port;
    const char*            remote_ip;
    int32_t                remote_port;
    uint32_t               granted_count, taken_count, deny_count;
} cimsue_floor_info_t;
typedef struct {
    int32_t     account_id;
    int64_t     token;
    const char* method;
    int32_t     code;
    const char* reason;
    const char* etag;                   
} cimsue_request_result_t;
typedef struct {
    int32_t     account_id;
    const char* watched;
    const char* id;
    const char* call_id;
    const char* local_tag;
    const char* remote_tag;
    const char* direction;              
    const char* state;                  
    const char* remote_identity;
    int32_t     full;
} cimsue_dialog_info_t;
typedef struct {
    const char* uri;
    const char* status;
} cimsue_roster_entry_t;
typedef struct {
    int32_t     account_id;
    const char* from_uri;
    const char* group_uri;
    const char* conv_id;
    const char* msg_id;
    int64_t     time_sec;
    int32_t     disposition_req;        
    const char* text;
    int32_t     notification;
    int32_t     notif_type;             
    int32_t     fd;
    const char* file_url;
    const char* file_name;
    const char* file_type;
    int64_t     file_size;
} cimsue_sds_message_t;
typedef struct {
    uint32_t rx_packets, rx_bytes, rx_loss, rx_discard;
    uint32_t tx_packets, tx_bytes;
    int32_t  valid;
} cimsue_stream_stats_t;
typedef struct {
    int32_t     id;
    const char* name;
    const char* driver;
    uint32_t    input_count;
    uint32_t    output_count;
} cimsue_audio_device_info_t;
typedef struct {
    void* user;
    void (CIMSUE_CALL* on_log)(void* user, int32_t level, const char* msg);
    void (CIMSUE_CALL* on_reg_state)(void* user, const cimsue_reg_info_t* info);
    void (CIMSUE_CALL* on_incoming_call)(void* user, const cimsue_call_info_t* info);
    void (CIMSUE_CALL* on_call_state)(void* user, const cimsue_call_info_t* info);
    void (CIMSUE_CALL* on_call_media)(void* user, const cimsue_call_info_t* info);
    void (CIMSUE_CALL* on_floor)(void* user, const cimsue_floor_event_t* ev);
    void (CIMSUE_CALL* on_roster)(void* user, int32_t account_id, const char* group_id,
                                  const cimsue_roster_entry_t* users, int32_t user_count, int32_t full);
    void (CIMSUE_CALL* on_dialog_info)(void* user, const cimsue_dialog_info_t* d);
    void (CIMSUE_CALL* on_sds)(void* user, const cimsue_sds_message_t* msg);
    void (CIMSUE_CALL* on_request_result)(void* user, const cimsue_request_result_t* r);
    void (CIMSUE_CALL* on_message)(void* user, int32_t account_id, const char* from_uri,
                                   const char* content_type, const char* body);
    void (CIMSUE_CALL* on_engine_stopped)(void* user);
} cimsue_listener_t;
typedef struct {
    const char* host;
    int32_t     port;
    const char* client_id;
    const char* redirect_uri;
    const char* scope;
    const char* ca_pem;                 
    int32_t     verify_server;
} cimsue_csc_endpoint_t;
typedef struct {
    const char* access_token;
    const char* token_type;
    const char* refresh_token;
    const char* id_token;
    const char* scope;
    int32_t     expires_in_sec;
} cimsue_token_set_t;
typedef struct {
    cimsue_transport_t transport;
    int32_t            port;
} cimsue_service_endpoint_t;
typedef struct {
    const char*                      kind;           
    const char*                      sip_host;
    int32_t                          sip_port;
    cimsue_transport_t               transport;
    const cimsue_service_endpoint_t* transports;
    int32_t                          transport_count;
    int32_t                          enforced;
    cimsue_media_security_t          media_security;
    const char*                      domain;
    const char*                      msisdn;
    const char*                      imsi;
    const char*                      auth_id;
    const char*                      sip_ha1;
    const char*                      mcptt_id;
    cimsue_auth_scheme_t             auth_scheme;
    const char*                      aka_k;
    const char*                      aka_opc;
    const char*                      aka_amf;
    const char* const*               sec_mechanisms;
    int32_t                          sec_mechanism_count;
    int32_t                          max_payload_sds_cplane_bytes;
} cimsue_service_profile_t;
typedef struct {
    const char* user_id;
    const char* name;
    const char* volte_aor;
    const char* ptt_id;
    const char* extension;
} cimsue_dispatch_member_t;
typedef struct {
    const char* id;
    const char* uri;
    const char* name;
} cimsue_dispatch_target_t;
typedef struct {
    int32_t                         present;
    const char*                     group_id;
    const char*                     group_name;
    const char*                     pilot_id;
    const char*                     monitor_scope;          
    const char*                     ptt_listen;
    const char*                     listen_visibility;
    const cimsue_dispatch_member_t* members;
    int32_t                         member_count;
    const cimsue_dispatch_target_t* ptt_targets;
    int32_t                         ptt_target_count;
} cimsue_dispatch_profile_t;
typedef struct {
    const char*                     display_name;
    const char*                     login_id;
    const char*                     country_code;
    const char*                     csc_host;
    int32_t                         csc_port;
    const cimsue_service_profile_t* services;
    int32_t                         service_count;
    cimsue_dispatch_profile_t       dispatch;
    int32_t                         allow_group_creation;   
} cimsue_profile_t;
typedef struct {
    const char* uri;
    const char* display_name;
    const char* etag;
    int32_t     member_count;
    int32_t     is_owner;               
} cimsue_group_summary_t;
typedef struct {
    const char* body;
    const char* etag;
    int32_t     not_modified;
} cimsue_xcap_doc_t;
typedef struct {
    const char* uri;
    const char* display_name;
    const char* role;
    int32_t     priority;
} cimsue_group_member_t;
typedef struct {
    const char*                  uri;
    const char*                  display_name;
    const char*                  etag;                  
    const cimsue_group_member_t* members;
    int32_t                      member_count;
    const char*                  session_type;          
    int32_t                      video_enabled;
    int32_t                      encryption;
    int32_t                      emergency_call;
    int32_t                      emergency_alert;
    int32_t                      allow_sds;
    int32_t                      allow_fd;
    int32_t                      require_affiliation;
    int32_t                      priority;
    int32_t                      max_participants;      
    const char*                  org_code;
    const char*                  authorized_user;       
} cimsue_group_doc_t;
typedef enum {
    CIMSUE_STRUCT_ENGINE_CONFIG = 0, CIMSUE_STRUCT_ACCOUNT_CONFIG, CIMSUE_STRUCT_CALL_OPTIONS,
    CIMSUE_STRUCT_GROUP_CALL_OPTIONS, CIMSUE_STRUCT_HEADER, CIMSUE_STRUCT_REG_INFO, CIMSUE_STRUCT_MCPTT_INFO,
    CIMSUE_STRUCT_MEDIA_SOURCE, CIMSUE_STRUCT_CALL_INFO, CIMSUE_STRUCT_TALKER, CIMSUE_STRUCT_FLOOR_EVENT,
    CIMSUE_STRUCT_FLOOR_INFO, CIMSUE_STRUCT_REQUEST_RESULT, CIMSUE_STRUCT_DIALOG_INFO, CIMSUE_STRUCT_ROSTER_ENTRY,
    CIMSUE_STRUCT_SDS_MESSAGE, CIMSUE_STRUCT_STREAM_STATS, CIMSUE_STRUCT_AUDIO_DEVICE_INFO, CIMSUE_STRUCT_LISTENER,
    CIMSUE_STRUCT_CSC_ENDPOINT, CIMSUE_STRUCT_TOKEN_SET, CIMSUE_STRUCT_SERVICE_ENDPOINT, CIMSUE_STRUCT_SERVICE_PROFILE,
    CIMSUE_STRUCT_DISPATCH_PROFILE, CIMSUE_STRUCT_PROFILE, CIMSUE_STRUCT_GROUP_SUMMARY, CIMSUE_STRUCT_XCAP_DOC,
    CIMSUE_STRUCT_DISPATCH_MEMBER, CIMSUE_STRUCT_DISPATCH_TARGET, CIMSUE_STRUCT_GROUP_MEMBER, CIMSUE_STRUCT_GROUP_DOC,
    CIMSUE_STRUCT_COUNT_
} cimsue_struct_id_t;
CIMSUE_API int32_t CIMSUE_CALL cimsue_struct_size(cimsue_struct_id_t id);